<resources>
    <string name="app_name">KiryuCashier</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="manajemen">Manajemen</string>
    <string name="riwayat">Riwayat</string>
    <string name="transaksi">Transaksi</string>
    <string name="log_out">Log Out</string>
    <string name="profil_anda">Profil Anda</string>

    <string name="kode_produk">Kode Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="jumlah_produk">Jumlah Produk</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="daftar_barang">Daftar Barang</string>
    <string name="laporan">Laporan</string>
    <string name="kode">Kode</string>
    <string name="nama">Nama</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="hapus_produk">Hapus Produk</string>
    <string name="update_produk">Update Produk</string>
    <string name="update">Update</string>
    <string name="Continue">Continue</string>
    <string name="biaya">Biaya</string>
    <string name="bayar">Bayar</string>
    <string name="end">End</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kembali">Kembali</string>
    <string name="detail_produk">Detail Produk</string>
</resources>