<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay_start_activity"
    tools:context=".feature.addproduk.AddProdukActivity">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout_white"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/im_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo2"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/mlight"
            android:text="@string/tambah_produk"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_goneMarginLeft="24dp">

        <LinearLayout
            android:id="@+id/lr_kode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/kode"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <!--            <EditText-->
            <!--                android:id="@+id/et_username"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:drawableStart="@drawable/ic_baseline_person_24"-->
            <!--                android:background="@drawable/bg_input_combine"-->
            <!--                android:inputType="text"-->
            <!--                android:padding="12dp"-->
            <!--                android:drawableLeft="@drawable/ic_baseline_person_24" />-->
            <EditText
                android:id="@+id/et_kode"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/nama"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_nama"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/harga"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_harga"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_qyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/stok"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_stok"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_baseline_keyboard_arrow_right_24"/>

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        style="@style/AppCompatButton.add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>