<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay_start_activity"
    tools:context=".feature.register.RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_layout_white"
            android:orientation="horizontal"
            android:layout_marginTop="70dp"
            android:padding="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/im_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo2"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/mlight"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/heading">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="9dp"
                android:text="Please fill up the forms below\nfor informations"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:id="@+id/lr_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/username"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_username_reg"
                    style="@style/EditText.Username"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/email"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_email_reg"
                    style="@style/EditText.Email" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr_tglLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/tanggal_lahir"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_tglLahir_reg"
                    style="@style/EditText.Date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/password"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_pass_reg"
                    style="@style/EditText.Password"/>

            </LinearLayout>

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue_reg"
            style="@style/AppCompatButton.register"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lr_form_login" />

        <ImageButton
            android:id="@+id/btn_back_reg"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_layout_white"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_continue_reg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lr_form_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>