<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:background="@drawable/bg_layout_white"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lr_form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="30dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/lr_kode_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/kode_produk"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <!--                    <EditText-->
            <!--                        android:id="@+id/et_kode_prod"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="50dp"-->
            <!--                        android:layout_marginTop="10dp"-->
            <!--                        android:background="@drawable/bg_input_combine"-->
            <!--                        android:inputType="text"-->
            <!--                        android:padding="12dp" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_combine"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_kode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_nama_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/nama_produk"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <!--                    <EditText-->
            <!--                        android:id="@+id/et_name_prod"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="50dp"-->
            <!--                        android:layout_marginTop="10dp"-->
            <!--                        android:background="@drawable/bg_input_combine"-->
            <!--                        android:inputType="text"-->
            <!--                        android:padding="12dp" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_combine"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_harga_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/harga_produk"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <!--                    <EditText-->
            <!--                        android:id="@+id/et_harga_prod"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="50dp"-->
            <!--                        android:layout_marginTop="10dp"-->
            <!--                        android:background="@drawable/bg_input_combine"-->
            <!--                        android:inputType="text"-->
            <!--                        android:padding="12dp" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_combine"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lr_jumlah_prod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/jumlah_produk"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <!--                    <EditText-->
            <!--                        android:id="@+id/et_jumlah_prod"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="50dp"-->
            <!--                        android:layout_marginTop="10dp"-->
            <!--                        android:background="@drawable/bg_input_combine"-->
            <!--                        android:inputType="text"-->
            <!--                        android:padding="12dp" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input_combine"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"/>

</androidx.cardview.widget.CardView>