<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay_start_activity"
    tools:context=".feature.Home.Profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_layout_white"
            android:orientation="horizontal"
            android:layout_marginTop="70dp"
            android:padding="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/im_logo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo2"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/mlight"
                android:text="@string/profil_anda"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/lr_form_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lr_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_nopic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="104dp"
                    android:layout_marginRight="124dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_cricle_blue"
                    android:fontFamily="@font/mmedium"
                    android:text="+"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/lr_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/email"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_email"
                    style="@style/EditText.Email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/nama"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_nama"
                    style="@style/EditText.Username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lr_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/tanggal_lahir"
                    android:textColor="@color/gray_primary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_date"
                    style="@style/EditText.Date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/btn_update"-->
            <!--                android:layout_width="270dp"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_marginTop="50dp"-->
            <!--                style="@style/AppCompatButton.update"-->
            <!--                android:layout_gravity="center"/>-->

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logOut"
            style="@style/AppCompatButton.logout"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lr_form_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>